--- a/27 - Click and Drag/index-START.html
+++ b/27 - Click and Drag/index-START.html
@@ -35,6 +35,37 @@
   </div>
 
 <script>
+  const slider = document.querySelector('.items');
+  let isDown = false;
+  let startX;
+  let scrollLeft;
+
+  slider.addEventListener('mousedown', () => {
+      isDown = true;
+      slider.classList.add('active');
+  });
+
+  slider.addEventListener('mouseleave', () => {
+    isDown = false;
+    slider.classList.remove('active');
+
+  });
+
+  slider.addEventListener('mouseup', () => {
+    isDown = false;
+    slider.classList.add('active');
+
+  });
+
+  slider.addEventListener('mousemove', () => {
+    if(!isDown) return; //stop function from running
+    console.log(isDown);
+    console.log("Do Work!");
+
+  });
+
+
+
 </script>
 
   </body>
