--- a/27 - Click and Drag/index-START.html
+++ b/27 - Click and Drag/index-START.html
@@ -40,9 +40,12 @@
   let startX;
   let scrollLeft;
 
-  slider.addEventListener('mousedown', () => {
+  slider.addEventListener('mousedown', (e) => {
       isDown = true;
       slider.classList.add('active');
+      startX = e.pageX - slider.offsetLeft;
+      scrollLeft = slider.scrollLeft;
+      
   });
 
   slider.addEventListener('mouseleave', () => {
@@ -57,10 +60,14 @@
 
   });
 
-  slider.addEventListener('mousemove', () => {
+  slider.addEventListener('mousemove', (e) => {
     if(!isDown) return; //stop function from running
-    console.log(isDown);
-    console.log("Do Work!");
+    e.preventDefault();
+    const x = e.pageX - slider.offsetLeft;
+    const walk = (x - startX) * 3;
+    slider.scrollLeft = scrollLeft - walk;
+
+    
 
   });
 
